# wwise-event-tapper

./: .gitignore  README.md  ci.py  pyproject.toml  ruff.toml
.cursor/rules/: python-refactor-guide.mdc  python-rules.mdc
docs/: development-plan.md
src/wet/: main.py
wet/: __main__.py  audio_player.py  event_recorder.py  main_window.py  util.py
wet/components/: calibrator.py  main_window.py  music_player.py  tap_trackers.py  title_bar.py  tracks.py  util.py  wwise_client.py
